change the email address and remove the <a> tag from top logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-              <a class="navbar-brand" href="#"><img src="img/davidWilliamsonLogo.png" class="logo-image" alt="David Williamson Logo"/></a>
+              <img src="img/davidWilliamsonLogo.png" class="logo-image navbar-brand" alt="David Williamson Logo"/>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -133,7 +133,7 @@
             <div class="row">
               <div class="col-md-4 text-center">
                 <div class="mt-5">
-                  <a href="mailto:williamsondavidv@outlook.com?subject=Your-Portfolio">Email: williamsondavidv@outlook.com</a>
+                  <a href="mailto:digitaldave@digitaldavenow.com?subject=Your-Portfolio">Email: digitaldave@digitaldavenow.com</a>
                 </div>
               </div>
               <div class="col-md-4 text-center">
