--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
-              <img src="img/davidWilliamsonLogo.png" class="logo-image navbar-brand" alt="David Williamson Logo"/>
+              <img src="img/site-logo-2.png" class="logo-image navbar-brand" alt="David Williamson Logo"/>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
