--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
               <div class="container">
                   <div class="row">
                       <div class="col-md-6">
-                        <h2>Hi! I am a results oriented life-long learner and software developer who is passionate about all aspects of programming.</h2>              
                       </div>
                       <div class="col-md-6 text-center">
                           <img src="img/comp-image.jpg" alt="Desktop Computer"  id="comp-image">
@@ -112,15 +111,24 @@
                   </div>
                 </div>
                 <div class="col-md-6 col-xl-8">
-                  <p class= "my-3">Hello and thank you for visiting! My name is David Williamson. I am interested in nearly everything under the sun, am a voracious reader, and love learning.
-                    Currently, I work for a large transportation company repairing the electrical and electronic systems on 
-                    rolling stock. I have a great deal of experience with troubleshooting and repair. I am passionate about 
-                    coding and am currently exploring web development. I have recently completed a B.S. in Software 
-                    Development with WGU in addition to a Java Certificate program with UCSD. I have also completed the 
-                    Team Treehouse Front-End Web Development Techdegree program and will be continuing through their 
-                    Full-Stack, Design, Python, and PHP programs. I intend to continue expanding my knowledge of Java and 
-                    other languages and plan on entering a Master's program within the next three years.
-                  </p>
+                  <p class= "my-3">Welcome! Currently, my occupation entails repairing electrical and electronic systems on rolling stock
+                     for a leading company in the freight transportation industry, where utilization of
+                    root-cause analysis and adaptive critical thinking in the development of solutions 
+                    have been paramount to success. Besides years of hands-on experience in 
+                    troubleshooting and repair, I am a recent graduate holding a B.S. Software 
+                    Development from Western Governors University and a Certificate in Java 
+                    Development from the University of California at San Diego, all of which were 
+                    earned while working full-time as an electrical technician. Also in my continually
+                     expanding tool-kit is the Team Treehouse Front-End Web Development 
+                     Techdegree program, soon to be complemented by Full-Stack, 
+                     Design, Python, and PHP, with the ultimate goal of enrolling in a 
+                     master's program within the next few years. When not working or coding, 
+                     my time is spent reading and trying new things in the kitchen.</p> 
+
+                    <p>It is a privilege to share my work with you. Please do not hesitate to contact me at your convenience.</p> 
+                    
+                    <p>Best Regards,</p>
+                    <p>David V. Williamson</p>
                 </div>
              </div>
           </div>
