--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                       <div class="col-md-6">
                       </div>
                       <div class="col-md-6 text-center">
-                          <img src="img/comp-image.jpg" alt="Desktop Computer"  id="comp-image">
+                          <!-- <img src="img/comp-work-image.jpeg" alt="Web Development Graphic"  id="comp-image"> -->
                       </div>
                     </div>
               </div>
@@ -107,7 +107,7 @@
               <div class="row">
                 <div class="text-center col-md-6 col-xl-4">
                   <div class="my-5">
-                    <img src="img/davidWilliamsonPic.jpg" class="mx-auto" alt="David Williamson"  id="david-image">
+                    <img src="img/comp-user-image.jpeg" class="mx-auto" alt="Laptop User"  id="david-image">
                   </div>
                 </div>
                 <div class="col-md-6 col-xl-8">
