change bio information

--- a/index.html
+++ b/index.html
@@ -118,12 +118,7 @@
                     troubleshooting and repair, I am a recent graduate holding a B.S. Software 
                     Development from Western Governors University and a Certificate in Java 
                     Development from the University of California at San Diego, all of which were 
-                    earned while working full-time as an electrical technician. Also in my continually
-                     expanding tool-kit is the Team Treehouse Front-End Web Development 
-                     Techdegree program, soon to be complemented by Full-Stack, 
-                     Design, Python, and PHP, with the ultimate goal of enrolling in a 
-                     master's program within the next few years. When not working or coding, 
-                     my time is spent reading and trying new things in the kitchen.</p> 
+                    earned while working full-time as an electrical technician.</p> 
 
                     <p>It is a privilege to share my work with you. Please do not hesitate to contact me at your convenience.</p> 
                     
