--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
                   </div>
                 </div>
                 <div class="col-md-6 col-xl-8">
-                  <p class= "my-3">Welcome! Currently, my occupation entails repairing electrical and electronic systems on rolling stock
-                     for a leading company in the freight transportation industry, where utilization of
-                    root-cause analysis and adaptive critical thinking in the development of solutions 
+                  <p class= "my-3">Welcome! Currently, my occupation entails repairing electrical systems on rolling stock
+                     for a leading company in the freight transportation industry, where utilization of troubleshooting and adaptive critical thinking in the development of solutions 
                     have been paramount to success. Besides years of hands-on experience in 
-                    troubleshooting and repair, I am a recent graduate holding a B.S. Software 
+                    maintenance and repair, I am a graduate holding a B.S. Software 
                     Development from Western Governors University and a Certificate in Java 
                     Development from the University of California at San Diego, all of which were 
                     earned while working full-time as an electrical technician.</p> 
