--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 <div class="col-md-6 col-xl-8">
                   <p class= "my-3">Welcome! Currently, my occupation entails repairing electrical systems on rolling stock
                      for a leading company in the freight transportation industry, where utilization of troubleshooting and adaptive critical thinking in the development of solutions 
-                    have been paramount to success. Besides years of hands-on experience in 
-                    maintenance and repair, I am a graduate holding a B.S. Software 
+                    have been necessary for success. Besides years of hands-on experience in 
+                    maintenance and repair, I am a graduate holding a B.S. in Software 
                     Development from Western Governors University and a Certificate in Java 
                     Development from the University of California at San Diego, all of which were 
                     earned while working full-time as an electrical technician.</p> 
